fixed bug in NumberedSlider (unit value was not showing) the right way

--- a/style.css
+++ b/style.css
@@ -81,3 +81,7 @@
     border: 0;
     padding: 4px;
 }
+
+.label-widget {
+    padding-top: 2px;
+}
